[package]
name = "rust-store-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = {version = "1.0"}
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
config = "0.11" 
bson = "0.14.0"
futures = "0.3"
tokio = { version = "1.11.0", features = ["full"] }
throw = "0.1.3"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]